# otf_pacemaker

./: .gitignore  README.md  check_gpu.py  config.yaml  config.yaml.backup  constant.yaml  main.py  pyproject.toml  setup_env.sh  training_log.csv
data/seed/: seed_structures.xyz
docs/: ARCHITECTURE.md  DESCRIPTOR_FIX.md  GPU_CONFIGURATION.md  KPOINT_DENSITY.md  QE_MPI_SETUP.md
src/: active_learning.py  config.py  interfaces.py  labeler.py  main.py  md_engine.py  orchestrator.py  seed_generation.py  trainer.py  workflow.py
src/autostructure/: __init__.py  alloy.py  base.py  builder.py  covalent.py  deformation.py  intelligence.py  interface.py  ionic.py  molecular.py  preopt.py
src/cli/: config_gen.py
src/core/: config.py  enums.py  factory.py  interfaces.py
src/engines/: calculators.py  kmc.py
src/generation/: candidate.py
src/scenario_generation/: filter.py  optimizer.py  sampler.py  scenarios.py
src/utils/: atomic_energies.py  hardware.py  logger.py  sssp_loader.py  structure.py
tests/: test_ace_sampler.py  test_active_learning.py  test_active_learning_orchestrator.py  test_active_learning_phase2.py  test_autostructure.py  test_autostructure_integration.py  test_config.py  test_graph_kmc.py  test_hardware.py  test_integration.py  test_integration_v2.py  test_kmc_integration.py  test_labeler.py  test_max_vol.py  test_md_engine.py  test_orchestrator_parallel.py  test_pacemaker_dynamic.py  test_phase4.py  test_physics_fixes.py  test_scenario_sampler.py  test_seed_generation.py  test_small_cell.py  test_utils_structure.py  test_validator.py
(+17 files in other folders)
